--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <%= link_to "Home Page", root_path %> | <%= link_to "About Us", home_about_path %>
+
   <body>
     <%= yield %>
   </body>
