--- a/app/assets/stylesheets/bootstraply.css.scss
+++ b/app/assets/stylesheets/bootstraply.css.scss
@@ -4,7 +4,7 @@ $body-bg: #e9e9e9;
 $navbar-default-brand-color: #cb2027;
 $link-color: #cb2027;
 $brand-primary: #cb2027;
-$jumbotron-bg: #fff;
+$jumbotron-bg: #ffffff;
 $navbar-border-radius: 0px;
 
 
